--- a/styles/style.css
+++ b/styles/style.css
@@ -664,13 +664,15 @@ footer a:hover{
     .aside{
       width: 30%;
       margin: 0;
-      padding: 1rem;
+     border-left: 1px solid rgb(95, 95, 95);
+      padding: 1rem 3rem 1rem 1rem;
     }
 
     .separador{
       border: none;
     }
 }
+
 
 
 
@@ -692,29 +694,84 @@ footer a:hover{
 
 .info-contacto{
     padding: 5px 30px 20px 30px;
+    color: var(--fuente);
+    font-family: var(--FuenteSec);
+    font-size: 1.3rem;
+    text-align: justify;
 }
 
-section fieldset {
-    margin: 2rem auto;
-    width: 600px;
+.fieldset {
+    margin: 0;
+    width: 95%;
     background-color: #EEEEEE;
     border: 3px outset #000;
     padding: 20px;
+    margin: auto;
+    border-radius: 1rem;
+}
+
+@media (min-width: 768px) {
+  .fieldset {
+    width: 90%;
+  }
+}
+@media (min-width: 1024px) {
+  .fieldset {
+    width: 70%;
+  }
 }
 
 fieldset legend {
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 15px;
-    
+    font-size: 1.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .label{
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 600;
-    
+    text-align: center;
+    text-transform: uppercase;
 }
 
+.mostrar{
+  display: inherit;
+  width: 100%;
+  border: 3px solid rgb(73, 72, 72);
+  height: 2.4rem;
+  border-radius: 1rem;
+  padding: .3rem;
+  text-align: center;
+}
+
+.mostrar:hover {
+  transform: scale(1.05);
+  border: 3px solid rgb(255, 3, 3);
+  transition: .5s;
+}
+
+.textarea{
+  width: 100%;
+  height: 8rem;
+}
+
+.display {
+  display: inherit;
+  width: 1.3rem;
+  height: 1.3rem;
+}
+.delivered{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.delivered > h3 {
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+}
 
 /* ---------- FIN CONTACT ------------- */
 
