--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ nav li {
 
 nav li:hover{
   border: .4rem solid slateblue;
-  background-color: #ba9f1b;
+  background: linear-gradient(90deg, rgb(64, 0, 138) 22%, rgba(255,255,255,1) 100%);
   transform: scale(1.3);
   transition: 1s;
 }
@@ -117,6 +117,10 @@ nav li a {
   text-decoration: none;
   font-family: var(--FuenteSec);
   font-size: 1.3rem;
+}
+
+nav li a:hover {
+  color: var(--blanco);
 }
 
 nav li a:active{
