--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,7 @@ nav li a:active{
   box-sizing: inherit;
 }
 
-.header__text {
+.header__text1 {
   font-family: var(--FuenteSec);
   color: var(--fuente);
   text-align: center;
@@ -466,7 +466,7 @@ nav li a:active{
     width: min(100%, 20rem);
   }
 
-  .header__text {
+  .header__text1 {
     font-size: 2rem;
   }
 }
@@ -567,7 +567,7 @@ footer a:hover{
 
 .mainBlog{
   background-color: var(--blanco);
-  margin: 4rem 2rem 2rem 2rem;
+  margin: 0;
 }
 
 .tittle-blog{
@@ -597,7 +597,7 @@ footer a:hover{
 .notificacionPpal > p{
   font-size: 1.2rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 2rem;
+  padding: 0;
   font-weight: 600;
   text-align: justify;
 }
@@ -611,6 +611,7 @@ footer a:hover{
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 2rem;
     }
     
 }
@@ -666,6 +667,12 @@ footer a:hover{
   text-align: justify;
 }
 
+@media (min-width: 768px) {
+  .mainBlog{
+    background-color: var(--blanco);
+    margin: 4rem 2rem 2rem 2rem;
+  }
+}
 
 @media (min-width: 1024px) {
     .mainBlog__blog{
@@ -791,10 +798,15 @@ fieldset legend {
 /* ---------- INICIO ABOUT ------------- */
 .about {
   background-color: var(--blanco);
-  margin: 7rem 5rem 2rem 5rem;
+  margin: 0;
  padding-bottom: 2rem;
 }
 
+@media (min-width: 768px) {
+    .about{
+      margin: 7rem 5rem 2rem 5rem;
+    }
+}
 
 .about > img {
   display: block;
