--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html {
 
 body {
   background-color: var(--bgamarillo);
-  font-family: var(--fuentePPal);
+  font-family: var(--FuenteSec);
 }
 
 h2 {
@@ -596,7 +596,7 @@ footer a:hover{
 
 .notificacionPpal > p{
   font-size: 1.2rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--FuenteSec);
   padding: 0;
   font-weight: 600;
   text-align: justify;
@@ -637,7 +637,7 @@ footer a:hover{
 
 .articulo1__contenido{
   font-size: 1.2rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--FuenteSec);
   padding: 0 2rem 2rem 2rem;
   font-weight: 600;
   text-align: justify;
@@ -817,7 +817,7 @@ fieldset legend {
 .about p {
   padding: 2rem 2rem;
   text-align: justify;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--FuenteSec);
   font-size: 1.2rem;
 }
 
