--- a/styles/style.css
+++ b/styles/style.css
@@ -108,8 +108,8 @@ nav li {
 nav li:hover{
   border: .4rem solid slateblue;
   background: linear-gradient(90deg, rgb(64, 0, 138) 22%, rgba(255,255,255,1) 100%);
-  transform: scale(1.3);
-  transition: 1s;
+  transform: scale(1.05);
+  transition: .5s;
 }
 
 nav li a {
