--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,8 @@ header h1:hover {
 .navbar-nav a:hover {
   transform: scale(1.3);
   transition: .3s;
+  background: linear-gradient(0deg, rgb(255, 255, 255) 4%, rgb(248, 206, 39) 100%);
+  border-radius: 1rem;
 }
 
 .activa {
