--- a/src/scss/ppal/_ppal.scss
+++ b/src/scss/ppal/_ppal.scss
@@ -1,6 +1,7 @@
+@use "../mixins" as m;
+
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap");
 /* @forward 'galeria'; */
-
 
 $fuentePPal: "Poppins", sans-serif;
 $FuenteSec: "Vollkorn SC", serif;
@@ -13,6 +14,21 @@ $blanco: #ffffff;
 $negro: #000000;
 $fuente: #333333;
 
+$fuentes: (
+  f1: $fuentePPal,
+  f2: $FuenteSec,
+  f3: $fuenteTer,
+  f4: $fuenteCuar,
+  f5: $fuenteQuin,
+);
+
+$colores: (
+  c1: $bgamarillo,
+  c2: $bgfooter,
+  c3: $blanco,
+  c4: $negro,
+  c5: $fuente,
+);
 
 * {
   margin: 0;
@@ -29,34 +45,48 @@ html {
 }
 
 body {
-  background-color: $bgamarillo;
-  font-family: $FuenteSec;
+  background-color: map-get($map: $colores, $key: c1);
+  font-family: map-get($map: $fuentes, $key: f2);
   font-size: 1.6rem;
 }
 
 h2 {
-  font-family: $fuenteCuar;
+  font-family: map-get($map: $fuentes, $key: f4);
+}
+
+%lineaBtn {
+  content: "";
+  width: 100%;
+  height: 1rem;
+  display: block;
+  margin: -4.3rem auto 0 auto;
+  background-color: map-get($map: $colores, $key: c2);
+  background-size: 4rem;
+}
+
+%blacky {
+  color: map-get($map: $colores, $key: c4);
 }
 
 /* ---------- HEADER ------------- */
 .linkheader {
   text-decoration: none !important;
-  color: #000000;
-}
+  @extend %blacky;
 
-.linkheader:hover {
-  color: #000000;
-  transform: scale(1.1);
+  &:hover {
+    @extend %blacky;
+    transform: scale(1.1);
+  }
 }
 
 header h1 {
   text-align: center;
-  font-family: $fuenteCuar;
+  font-family: map-get($map: $fuentes, $key: f4);
   font-size: 6rem;
-}
 
-header h1:hover {
-  transform: scale(1.1);
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 .header-logo {
@@ -64,7 +94,7 @@ header h1:hover {
   width: 8rem;
 }
 
-@media (max-width: 400px) {
+@include m.tam2 {
   .h1 {
     font-size: 0.5rem !important;
   }
@@ -73,7 +103,7 @@ header h1:hover {
   }
 }
 
-@media (min-width: 500px) {
+@include m.tam3 {
   .logo {
     animation-duration: 2s;
     animation-delay: 0s;
@@ -109,7 +139,7 @@ header h1:hover {
 }
 
 .navbar-dark {
-  color: #000000 !important;
+  color: map-get($map: $colores, $key: c4) !important;
 }
 
 .navbar-toggler {
@@ -117,27 +147,29 @@ header h1:hover {
   height: 30px;
 }
 
+.navbar-nav {
+  .activa {
+    color: #2c1b00 !important;
+    text-decoration: overline !important;
+  }
+}
+
 .navbar-nav a {
   font-size: 2.2rem;
-}
-.navbar-nav a:hover {
-  transform: scale(1.3);
-  transition: 0.3s;
-  background: linear-gradient(
-    0deg,
-    rgb(255, 255, 255) 4%,
-    rgb(248, 206, 39) 100%
-  );
-  border-radius: 1rem;
+
+  &:hover {
+    transform: scale(1.3);
+    transition: 0.3s;
+    background: linear-gradient(
+      0deg,
+      map-get($map: $colores, $key: c3) 4%,
+      map-get($map: $colores, $key: c1) 100%
+    );
+    border-radius: 1rem;
+  }
 }
 
-.activa {
-  color: #2c1b00 !important;
-  text-decoration: overline !important;
-  
-}
-
-@media (min-width: 300px) {
+@include m.tam1 {
   .ns-1 {
     animation-duration: 2s;
     animation-delay: 0s;
@@ -169,22 +201,26 @@ header h1:hover {
 /* ---------- HERO ------------- */
 .hero {
   margin-top: 5rem;
-}
-
-.video {
-  width: 100%;
-  margin-bottom: -0.8rem;
+  .video {
+    width: 100%;
+    margin-bottom: -0.8rem;
+  }
 }
 
 /* ---------- SECCION1 ------------- */
 .seccion1 {
   background-color: $blanco;
-  font-family: $fuenteQuin;
+  font-family: map-get($map: $fuentes, $key: f5);
 }
 
-@media (min-width: 768px) {
+@include m.tam4 {
   .bordertexto {
     border-right: 1px solid #c5c5c5;
+  }
+
+  .textoSeccion3 {
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 }
 
@@ -194,10 +230,11 @@ header h1:hover {
   background-size: cover;
   height: 300px;
   border-radius: 2rem;
-}
-.seccion2img:hover {
-  transform: scale(1.02);
-  transition: 200ms;
+
+  &:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+  }
 }
 
 .seccion2img1 {
@@ -225,25 +262,14 @@ header h1:hover {
 }
 
 .lineaBtn {
-  content: "";
-  width: 100%;
-  height: 1rem;
-  display: block;
-  margin: -4.3rem auto 0 auto;
-  background-color: #dc3545;
-  background-size: 4rem;
+  @extend %lineaBtn;
 }
 
 .textoSeccion3 {
   margin-top: 4.3rem;
   text-align: center;
 }
-@media (min-width: 768px) {
-  .textoSeccion3 {
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-}
+
 /* ------- SECCION 4 ------- */
 
 .seccion4img {
@@ -251,10 +277,11 @@ header h1:hover {
   background-position: center;
   height: 300px;
   border-radius: 2rem;
-}
-.seccion4img:hover {
-  transform: scale(1.02);
-  transition: 200ms;
+
+  &:hover {
+    transform: scale(1.02);
+    transition: 200ms;
+  }
 }
 
 .seccion4img1 {
@@ -270,11 +297,11 @@ header h1:hover {
 /* FOOTER */
 .fab {
   font-size: 4rem;
-  color: #000000;
+  @extend %blacky;
   margin: 0.7rem;
-}
 
-.fab:hover {
-  transform: scale(1.1);
-  color: #a0a0a0;
+  &:hover {
+    transform: scale(1.1);
+    color: #a0a0a0;
+  }
 }
